First working version

--- a/brouillon/chatbot.ipynb
+++ b/brouillon/chatbot.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -211,42 +211,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All messages:  [AIMessage(content='Hi there! How can I assist you today?', additional_kwargs={}, response_metadata={'finish_reason': 'stop', 'model_name': 'gpt-4o-2024-08-06', 'system_fingerprint': 'fp_7f6be3efb0'}, id='run-130419a4-3fc3-4d18-89c6-cdd8c5f57a80-0')]\n",
-      "All messages:  [AIMessage(content='Johnny Sins, whose real name is Steven Wolfe, began his career in the adult film industry around 2006. He was born on December 31, 1978, which means he was about 27 or 28 years old when he started his career.', additional_kwargs={}, response_metadata={'finish_reason': 'stop', 'model_name': 'gpt-4o-2024-08-06', 'system_fingerprint': 'fp_831e067d82'}, id='run-4a309b5a-64fa-48c3-b009-fb020e7b5144-0')]\n",
-      "All messages:  [AIMessage(content=\"I'm sorry, but I can't recall previous interactions or questions. However, feel free to ask your question again, and I'll do my best to help!\", additional_kwargs={}, response_metadata={'finish_reason': 'stop', 'model_name': 'gpt-4o-2024-08-06', 'system_fingerprint': 'fp_7f6be3efb0'}, id='run-63b5d81c-2001-4aee-bbec-715cea49cc96-0')]\n",
-      "All messages:  [AIMessage(content='As of October 2023, Johnny Sins, whose real name is Steven Wolfe, was born on December 31, 1978. This would make him 44 years old.', additional_kwargs={}, response_metadata={'finish_reason': 'stop', 'model_name': 'gpt-4o-2024-08-06', 'system_fingerprint': 'fp_7f6be3efb0'}, id='run-f77c6edd-213c-4a64-9f75-c30c49d134d4-0')]\n",
-      "All messages:  [AIMessage(content='Jonny Sins was born on December 31, 1978. As of now, he is 44 years old.', additional_kwargs={}, response_metadata={'finish_reason': 'stop', 'model_name': 'gpt-4o-2024-08-06', 'system_fingerprint': 'fp_90354628f2'}, id='run-33c23e67-5d56-41be-878a-be4e621d1d7b-0')]\n",
-      "All messages:  [AIMessage(content='Hello! How can I assist you today?', additional_kwargs={}, response_metadata={'finish_reason': 'stop', 'model_name': 'gpt-4o-2024-08-06', 'system_fingerprint': 'fp_7f6be3efb0'}, id='run-affec15b-8200-4093-9d2c-bc06f14d896c-0')]\n",
-      "Goodbye!\n"
-     ]
-    }
-   ],
-   "source": [
-    "while True:\n",
-    "    try:\n",
-    "        user_input = input(\"User: \")\n",
-    "        if user_input.lower() in [\"quit\", \"exit\", \"q\"]:\n",
-    "            print(\"Goodbye!\")\n",
-    "            break\n",
-    "\n",
-    "        stream_graph_updates(user_input)\n",
-    "    except:\n",
-    "        # fallback if input() is not available\n",
-    "        user_input = \"What do you know about LangGraph?\"\n",
-    "        print(\"User: \" + user_input)\n",
-    "        stream_graph_updates(user_input)\n",
-    "        break"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -255,7 +219,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langgraph.checkpoint.memory import MemorySaver\n",
+    "memory = MemorySaver()\n",
+    "graph = graph_builder.compile(checkpointer=memory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -264,27 +239,57 @@
      "text": [
       "================================\u001b[1m Human Message \u001b[0m=================================\n",
       "\n",
-      "My name is Henri.\n",
+      "What's my name ?\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "Hello, Henri! How can I assist you today?\n"
+      "I'm sorry, but I can't determine your name.\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "My name is Henri \n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "Nice to meet you, Henri! How can I assist you today?\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "What's my name ?\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "Your name is Henri. How can I help you today?\n"
      ]
     }
    ],
    "source": [
-    "from langgraph.checkpoint.memory import MemorySaver\n",
     "\n",
+    "config = {\"configurable\": {\"thread_id\":\"WHATSAPP\"}}\n",
     "memory = MemorySaver()\n",
-    "\n",
     "graph = graph_builder.compile(checkpointer=memory)\n",
-    "config = {\"configurable\": {\"thread_id\":\"1\"}}\n",
     "\n",
     "\n",
-    "user_input = \"Hi there! My name is Will.\"\n",
-    "events = graph.stream({\"messages\": [(\"user\", user_input)]}, config=config)\n",
-    "\n",
+    "user_input = \"What's my name ?\"\n",
+    "events = graph.stream(\n",
+    "    {\"messages\": [(\"user\", user_input)]}, config, stream_mode=\"values\"\n",
+    ")\n",
     "for event in events:\n",
-    "    event[\"messages\"][-1].pretty_print()\n"
+    "    event[\"messages\"][-1].pretty_print()\n",
+    "\n",
+    "\n",
+    "\n",
+    "user_input = \"My name is Henri \"\n",
+    "\n",
+    "# The config is the **second positional argument** to stream() or invoke()!\n",
+    "events = graph.stream(\n",
+    "    {\"messages\": [(\"user\", user_input)]}, config, stream_mode=\"values\"\n",
+    ")\n",
+    "for event in events:\n",
+    "    event[\"messages\"][-1].pretty_print()\n",
+    "\n",
+    "user_input = \"What's my name ?\"\n",
+    "events = graph.stream(\n",
+    "    {\"messages\": [(\"user\", user_input)]}, config, stream_mode=\"values\"\n",
+    ")\n",
+    "for event in events:\n",
+    "    event[\"messages\"][-1].pretty_print()\n",
+    "\n"
    ]
   }
  ],
